--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  -assets/images/
-  -assets/icons/
-  -assets/languages/
-  -assets/motions/
+  assets:
+    -assets/images/
+    -assets/icons/
+    -assets/languages/
+    -assets/motions/
