--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,21 +8,23 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  dotlottie_loader: ^0.0.4
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   go_router: ^14.8.0
+  lottie: any
   shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
     - assets/icons/
-    - assets/language/
+    - assets/languages/
     - assets/motions/
