--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   go_router: ^14.8.0
+  google_fonts: ^6.2.1
   lottie: any
   shared_preferences: ^2.5.2
 
